--- a/templates/house_announcement.html
+++ b/templates/house_announcement.html
@@ -5,47 +5,56 @@
         <script src="{{ url_for('static', filename='js/house_announcement/house_announcement.js') }}"></script>
     </div>
 
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#ShareHouseModal">Share House</button>
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#SharingHouseAnnouncementModal">Share House</button>
 
-    <div class="modal fade" id="ShareHouseModal" role="dialog">
+    <div class="modal fade" id="SharingHouseAnnouncementModal" role="dialog">
         <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Share House</h4>
-                      </div>
-                      <div class="modal-body">
-                        <form>
-                          <div class="form-group">
-                            <label for="InputLocation">Location</label>
-                            <input class="form-control" id="LocationOfNewHouse" placeholder="Enter location" type="text">
-                          </div>
-                          <div class="form-group">
-                            <label for="InputRentPrice">Rent Price</label>
-                            <input class="form-control" id="RentOfNewHouse" placeholder="Enter Rent" type="text">
-                          </div>
-                          <div class="form-group">
-                            <label for="numberPeopleInHouse">Number of People in house Currently</label>
-                            <input class="form-control" id="numberPeopleInHouse"  type="text">
-                          </div>
-                          <div class="form-group">
-                            <label for="InputGender">Gender of Roommate</label>
-                            <input type="checkbox" name="Male" value="Male"> Male
-                            <input type="checkbox" name="Female" value="Female"> Female<br>
-                          </div>
-                          <div class="form-group">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Share House</h4>
+                </div>
+                <div class="modal-body">
+                    <form method="POST" action="" name="SharingHouseForm" role="form">
+
+                        <div class="form-group">
+                            <label for="InputLocationOfSharingHouse">Location</label>
+                            <input class="form-control" name="InputLocationOfSharingHouse" id="InputLocationOfSharingHouse" placeholder="Enter location" type="text" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="InputRentPriceOfSharingHouse">Rent Price</label>
+                            <input class="form-control" name = "InputRentPriceOfSharingHouse" id="InputRentPriceOfSharingHouse" placeholder="Enter Rent" type="text" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="numberOfPeopleInHouse">Number of People in house Currently</label>
+                            <input class="form-control" name = "numberOfPeopleInHouse" id="numberOfPeopleInHouse" type="text" required>
+                        </div>
+
+                        <div class="form-group">
                             <div class="form-radio">
-                                <label for="InputRentPrice">Number of rooms</label>
+                                <label for="InputGenderforSharingHouse">Gender of HouseMate: </label>
+                                <input type="radio" name="Male" value="Male"> Male
+                                <input type="radio" name="Female" value="Female"> Female<br>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="form-radio">
+                                <label for="NumberOfRoom">Number of rooms</label>
                                 <input type="radio" name="NumberOfRoom" value="1+1" checked> 1+1
                                 <input type="radio" name="NumberOfRoom" value="2+1"> 2+1
                                 <input type="radio" name="NumberOfRoom" value="3+1"> 3+1
                                 <input type="radio" name="NumberOfRoom" value="4+1"> 4+1<br>
                             </div>
                           </div>
+
                           <div class="form-group">
-                            <label for="DescriptionOfHouse">Description</label>
-                            <input class="form-control" id="DescriptionOfHouse" placeholder="You may enter description for house" type="text">
+                            <label for="DescriptionOfSharingHouse">Description</label>
+                            <input class="form-control" name = "DescriptionOfSharingHouse" id="DescriptionOfSharingHouse" placeholder="You may enter description for house" type="text">
                           </div>
+
                         </form>
                       </div>
                       <div class="modal-footer">
@@ -56,45 +65,42 @@
                   </div>
                 </div>
 
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#FindHouseModal">Find House</button>
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#SSearchingHouseAnnouncementModal">Find House</button>
 
-    <div class="modal fade" id="FindHouseModal" role="dialog">
+    <div class="modal fade" id="SSearchingHouseAnnouncementModal" role="dialog">
         <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Find House</h4>
-                      </div>
-                      <div class="modal-body">
-                        <form>
-                          <div class="form-group">
-                            <label for="InputLocation">Location</label>
-                            <input class="form-control" id="LocationOfNewHouse" placeholder="Enter location" type="text">
-                          </div>
-                          <div class="form-group">
-                            <label for="InputGender">Gender of Roommate</label>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Find House</h4>
+                </div>
+                <div class="modal-body">
+                    <form method="POST" action="" name="SearchingHouseAnnouncementForm" role="form">
+
+                        <div class="form-group">
+                            <label for="InputLocationOfSearchingHouse">Location</label>
+                            <input class="form-control" id="LocationOfNewHouse" placeholder="Enter location" type="text" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="InputGenderforSharingHouse">Gender of Roommate</label>
                             <input type="checkbox" name="Male" value="Male"> Male
                             <input type="checkbox" name="Female" value="Female"> Female<br>
                           </div>
+
+                        <div class="form-group">
+                            <label for="InputMinRentPriceOfSearchingHouse">Minimum Rent Price</label>
+                            <input class="form-control"  name = "InputMinRentPriceOfSearchingHouse" id="InputMinRentPriceOfSearchingHouse" placeholder="Enter Minimum Rent Price" type="text"required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="InputMaxRentPriceOfSearchingHouse">Minimum Rent Price</label>
+                            <input class="form-control"  name = "InputMaxRentPriceOfSearchingHouse" id="InputMaxRentPriceOfSearchingHouse" placeholder="Enter Maximum Rent Price" type="text"required>
+                        </div>
+
                           <div class="form-group">
-                            <label for="InputRentPrice">Rent Price Per Person:</label><br>
-                            <input type="checkbox" name="0 - 499" value="Male"> 0 - 499
-                            <input type="checkbox" name="500 - 749" value="Male"> 500 - 749
-                            <input type="checkbox" name="750 - 999" value="Male"> 750 - 999
-                            <input type="checkbox" name="1000+" value="Male"> 1000+<br>
-                          </div>
-                          <div class="form-group">
-                            <div class="form-radio">
-                                 <label for="InputRentPrice">Number of rooms</label>
-                                <input type="radio" name="NumberOfRoom" value="1+1" checked> 1+1
-                                <input type="radio" name="NumberOfRoom" value="2+1"> 2+1
-                                <input type="radio" name="NumberOfRoom" value="3+1"> 3+1
-                                <input type="radio" name="NumberOfRoom" value="4+1"> 4+1<br>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <label for="DescriptionOfHouse">Description</label>
-                            <input class="form-control" id="DescriptionOfHouse" placeholder="You may enter description for house" type="text">
+                            <label for="DescriptionOfSearchingHouse">Description</label>
+                            <input class="form-control" name = "DescriptionOfSearchingHouse" id="DescriptionOfSearchingHouse" placeholder="You may enter description for house" type="text"required>
                           </div>
                         </form>
                       </div>
