--- a/templates/lost_found.html
+++ b/templates/lost_found.html
@@ -27,7 +27,7 @@
                           </div>
                           <div class="form-group">
                             <label for="date">Possible date of losing</label>
-                            <input class="form-control" name="LostSomethingDate"type="date" name="date" value="date"><br>
+                            <input class="form-control" name="LostSomethingDate"type="date" value="date"><br>
                           </div>
                           <div class="form-group">
                             <label for="OwnerName">Name of Owner</label>
@@ -71,7 +71,7 @@
                           </div>
                           <div class="form-group">
                             <label for="date">Date of finding</label>
-                            <input class="form-control" name="FoundSomethingDate" type="date" name="Date" value="date"><br>
+                            <input class="form-control" name="FoundSomethingDate" type="date" value="date"><br>
                           </div>
                           <div class="form-group">
                             <label for="FinderName">Name of person who found</label>
