--- a/templates/login.html
+++ b/templates/login.html
@@ -41,6 +41,7 @@
         <div class="text-center">
           <a class="d-block small mt-3" href={{ url_for('site.SignUpPage') }}>Register an Account</a>
           <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+          <a class="nav-link" href="{{ url_for('site.initialize_database') }}">InitDB</a>
         </div>
       </div>
     </div>
