--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,14 +56,20 @@
 			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
 				  <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
 					  <i class="fa fa-fw fa-wrench"></i>
-					  <span class="nav-link-text">Components</span>
+					  <span class="nav-link-text">Restaurants</span>
 				  </a>
 				  <ul class="sidenav-second-level collapse" id="collapseComponents">
 					  <li>
-						  <a href="navbar.html">Navbar</a>
+              <a class="nav-link" href="{{ url_for('site.RestaurantsPage') }}">
+					      <i class="fa fa-fw fa-area-chart"></i>
+					      <span class="nav-link-text">Search Restaurant</span>
+				      </a>
 					  </li>
 					  <li>
-						  <a href="cards.html">Cards</a>
+              <a class="nav-link" href="{{ url_for('site.RestaurantsPage') }}">
+					      <i class="fa fa-fw fa-area-chart"></i>
+					      <span class="nav-link-text">Add Restaurant</span>
+				      </a>
 					  </li>
 				  </ul>
 			  </li>
@@ -281,7 +287,7 @@
     <footer class="sticky-footer">
       <div class="container">
         <div class="text-center">
-          <small>Copyright © Your Website 2017</small>
+          <small>Copyright © 2017 by Görkem Toppeker & Hakan Sander &  Adil Furkan Ekici & Sercan Şahan </small>
         </div>
       </div>
     </footer>
