--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,13 +35,30 @@
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarResponsive">
 		  <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="HouseMate">
-				  <a class="nav-link" href="{{ url_for('site.HousePage') }}">
-					  <i class="fa fa-fw fa-area-chart"></i>
+
+              <li class="nav-item" data-toggle="tooltip" data-placement="right" title="HouseMate">
+				  <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseHouseMate" data-parent="#exampleAccordion">
+					  <i class="fa fa-fw fa-wrench"></i>
 					  <span class="nav-link-text">HouseMate</span>
 				  </a>
+				  <ul class="sidenav-second-level collapse" id="collapseHouseMate">
+					  <li>
+              <a class="nav-link" href="{{ url_for('site.ShareMyHousePageAnnouncement') }}">
+					      <i class="fa fa-fw fa-area-chart"></i>
+					      <span class="nav-link-text">Sharing Houses</span>
+				      </a>
+					  </li>
+					  <li>
+              <a class="nav-link" href="{{ url_for('site.SearchedHousePageAnnouncement') }}">
+					      <i class="fa fa-fw fa-area-chart"></i>
+					      <span class="nav-link-text">Searching Houses</span>
+				      </a>
+					  </li>
+				  </ul>
 			  </li>
-			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Lost-Found Stuff">
+
+
+              <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Lost-Found Stuff">
 				  <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
 					  <i class="fa fa-fw fa-file"></i>
 					  <span class="nav-link-text">Lost-Found Stuff</span>
