--- a/templates/sharedmyhouse_announcement.html
+++ b/templates/sharedmyhouse_announcement.html
@@ -52,7 +52,7 @@
                     </div>
                   </div>
                 </div>
-    {% if sharingHouse %}
+    {% if ALLSharingHouse %}
         <table style="width:100%">
             <tr>
                 <th>NO</th>
@@ -64,7 +64,7 @@
                 <th>NAME</th>
                 <th>SURNAME</th>
             </tr>
-            {% for item in sharingHouse %}
+            {% for item in ALLSharingHouse %}
                 <tr>
                     <td>{{ item[0] }}</td>
                     <td>{{ item[1] }}</td>
