--- a/templates/searchedhouse_announcement.html
+++ b/templates/searchedhouse_announcement.html
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-{% if searchedHouse %}
+{% if ALLSearchedHouse %}
         <table style="width:100%">
             <tr>
                 <th>NO</th>
@@ -50,7 +50,7 @@
                 <th>NAME</th>
                 <th>SURNAME</th>
             </tr>
-            {% for item in searchedHouse %}
+            {% for item in ALLSearchedHouse %}
                 <tr>
                     <td>{{ item[0] }}</td>
                     <td>{{ item[1] }}</td>
