--- a/templates/sharedmyhouse_announcement.html
+++ b/templates/sharedmyhouse_announcement.html
@@ -53,27 +53,42 @@
                   </div>
                 </div>
     {% if ALLSharingHouse %}
-        <table style="width:100%">
-            <tr>
-                <th>NO</th>
-                <th>LOCATION</th>
-                <th>RENTPRICE</th>
-                <th>NUMBEROFPEOPLE</th>
-                <th>NUMBEROFROOM</th>
-                <th>DESCRIPTION</th>
-                <th>NAME</th>
-                <th>SURNAME</th>
-            </tr>
+        <table id = "SharingHouseAnnouncementTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
+            <thead>
+                <tr role = "row">
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">LOCATION</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">RENTPRICE</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">NUMBEROFPEOPLE</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">NUMBEROFROOM</th>
+                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 215.333px;" aria-label="Position: activate to sort column ascending">DESCRIPTION</th>
+                </tr>
+            </thead>
             {% for item in ALLSharingHouse %}
-                <tr>
+                <tr role = "row">
                     <td>{{ item[0] }}</td>
                     <td>{{ item[1] }}</td>
                     <td>{{ item[2] }}</td>
                     <td>{{ item[3] }}</td>
-                    <td>{{ item[4] }}</td>
-                    <td>{{ item[5] }}</td>
-                    <td>{{ item[6] }}</td>
-                    <td>{{ item[7] }}</td>
+                    <td>
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#DescriptionModal">Description</button>
+                        <div class="modal fade" id="DescriptionModal" role="dialog">
+                             <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h4 class="modal-title">Description</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <label>Owner of Announcement</label>
+                                         <p>{{ item[5]}} {{ item[6] }}</p>
+                                        <label>Description of House</label>
+                                        <p>{{ item[4] }}</p>
+                                    </div>
+                                </div>
+                        </div>
+                        </div>
+                    </td>
+
                 </tr>
             {% endfor %}
         </table>
