--- a/templates/found_stuff.html
+++ b/templates/found_stuff.html
@@ -54,16 +54,19 @@
                 <th>Description</th>
                 <th>Current Location</th>
                 <th>Date of Finding(YEAR-MONTH-DAY)</th>
+                <th>Name of Person Who Found</th>
             </tr>
             {% for item in founditems %}
                 <tr>
                     <td>{{ item[0] }}</td>
                     <td>{{ item[1] }}</td>
                     <td>{{ item[2] }}</td>
+                    <td>{{ item[3] }}</td>
                 </tr>
             {% endfor %}
         </table>
     {% else %}
+        <br>
         <p>There are no items.</p>
     {% endif %}
 {%endblock %}
