--- a/templates/layout.html
+++ b/templates/layout.html
@@ -117,11 +117,11 @@
 			  </li>
 
 			  <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Activities">
-				  <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseSpecialLessons" data-parent="#exampleAccordion">
+				  <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseActivities" data-parent="#exampleAccordion">
 					  <i class="fa fa-fw fa-file"></i>
 					  <span class="nav-link-text">Activities</span>
 				  </a>
-				  <ul class="sidenav-second-level collapse" id="collapseSpecialLessons">
+				  <ul class="sidenav-second-level collapse" id="collapseActivities">
 					  <li>
 						  <a href="{{ url_for('site.ClubActivityPage') }}">Student Club Activities</a>
 					  </li>
