--- a/templates/sport_activities.html
+++ b/templates/sport_activities.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} ITU Activities {% endblock %}
+{% block title %} Sport Activities {% endblock %}
 {% block content %}
 
     <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#SportActivities">Add Sport Activity</button>
