--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -2,73 +2,92 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <title>SB Admin - Start Bootstrap Template</title>
-  <!-- Bootstrap core CSS-->
-  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
-  <!-- Custom fonts for this template-->
-  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/font-awesome/css/font-awesome.min.css') }}">
-  <!-- Custom styles for this template-->
-  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/sb-admin.css') }}">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>SB Admin - Start Bootstrap Template</title>
+    <!-- Bootstrap core CSS-->
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
+    <!-- Custom fonts for this template-->
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/font-awesome/css/font-awesome.min.css') }}">
+    <!-- Custom styles for this template-->
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/sb-admin.css') }}">
 </head>
 
 <body class="bg-dark">
-  <div class="container">
+<div class="container">
     <div class="card card-register mx-auto mt-5">
-      <div class="card-header">Register an Account</div>
-      <div class="card-body">
-        <form action="" method="POST">
-          <div class="form-group">
-            <div class="form-row">
-              <div class="col-md-6">
-                <label for="exampleInputName">First name</label>
-                <input class="form-control" id="firstName" name="firstName"  type="text" aria-describedby="nameHelp" placeholder="Enter first name" required>
-              </div>
-              <div class="col-md-6">
-                <label for="exampleInputLastName">Last name</label>
-                <input class="form-control" id="lastName" name="lastName" type="text" aria-describedby="nameHelp" placeholder="Enter last name" required>
-              </div>
+        <div class="card-header">Register an Account</div>
+        <div class="card-body">
+            <form action="" method="POST">
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="col-md-6">
+                            <label for="exampleInputName">First name</label>
+                            <input class="form-control" id="firstName" name="firstName"  type="text" aria-describedby="nameHelp" placeholder="Enter first name" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="exampleInputLastName">Last name</label>
+                            <input class="form-control" id="lastName" name="lastName" type="text" aria-describedby="nameHelp" placeholder="Enter last name" required>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input class="form-control" id="email" name="email" type="email" aria-describedby="emailHelp" placeholder="Enter email" required>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Username</label>
+                    <input class="form-control" id="username" name="username" type="text" aria-describedby="emailHelp" placeholder="Enter username" required>
+                </div>
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="col-md-6">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input class="form-control" id="password" name="password" type="password" placeholder="Password" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="exampleConfirmPassword">Confirm password</label>
+                            <input class="form-control" id="exampleConfirmPassword" type="password" placeholder="Confirm password" required>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="col-md-6">
+                            <label for="exampleInputPassword1">Select your faculty</label>
+                            <select class="form-control" id="faculty" name="faculty" >
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+            </form>
+            <div class="text-center">
+                <a class="d-block small mt-3" href={{ url_for('site.LoginPage')}}>Login Page</a>
+                <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
             </div>
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input class="form-control" id="email" name="email" type="email" aria-describedby="emailHelp" placeholder="Enter email" required>
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Username</label>
-            <input class="form-control" id="username" name="username" type="text" aria-describedby="emailHelp" placeholder="Enter username" required>
-          </div>
-          <div class="form-group">
-            <div class="form-row">
-              <div class="col-md-6">
-                <label for="exampleInputPassword1">Password</label>
-                <input class="form-control" id="password" name="password" type="password" placeholder="Password" required>
-              </div>
-              <div class="col-md-6">
-                <label for="exampleConfirmPassword">Confirm password</label>
-                <input class="form-control" id="exampleConfirmPassword" type="password" placeholder="Confirm password" required>
-              </div>
-            </div>
-          </div>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-        </form>
-        <div class="text-center">
-          <a class="d-block small mt-3" href={{ url_for('site.LoginPage')}}>Login Page</a>
-          <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+
         </div>
-      </div>
     </div>
-  </div>
-  <!-- Bootstrap core JavaScript-->
-  <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendor/popper/popper.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
-  <!-- Core plugin JavaScript-->
-  <script src="{{ url_for('static', filename='vendor/jquery-easing/jquery.easing.min.js') }}"></script>
+</div>
+<!-- Bootstrap core JavaScript-->
+<script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
+<script src="{{ url_for('static', filename='vendor/popper/popper.min.js') }}"></script>
+<script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+<!-- Core plugin JavaScript-->
+<script src="{{ url_for('static', filename='vendor/jquery-easing/jquery.easing.min.js') }}"></script>
 </body>
 
 </html>
