--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,7 +38,7 @@
             <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
 
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="UserProfile">
-                    <a class="nav-link" href="{{ url_for('site.ProfilePage', user_id=1) }}">
+                    <a class="nav-link" href="{{ url_for('site.ProfilePage') }}">
                         <i class="fa fa-fw fa-wrench"></i>
                         <span class="nav-link-text">Profile</span>
                     </a>
