--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,9 +3,9 @@
 {% block content %}
     <h1>Welcome to ITUHelper!</h1>
 
-    {% if user %}
-        <p>{{ user.get_name() }}</p>
-    {% endif %}
+
+    <p>{{ current_user.get_name() }}</p>
+
 
 
 {% endblock %}
