--- a/templates/layout.html
+++ b/templates/layout.html
@@ -320,19 +320,19 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item small" href="#">View all alerts</a>
                     </div>
-                </li>
+                </li>-->
                 <li class="nav-item">
-                    <form class="form-inline my-2 my-lg-0 mr-lg-2">
+                    <form class="form-inline my-2 my-lg-0 mr-lg-2" name="usernameSearchForm" id="usernameSearchForm">
                         <div class="input-group">
-                            <input class="form-control" type="text" placeholder="Search for...">
+                            <input class="form-control" type="text" name="usernameSearch" id="usernameSearch" placeholder="Search for a user" required>
                             <span class="input-group-btn">
-                  <button class="btn btn-primary" type="button">
+                  <button class="btn btn-primary" type="submit" id="userSearchButton" name="userSearchButton" formmethod="POST">
                     <i class="fa fa-search"></i>
                   </button>
                 </span>
                         </div>
                     </form>
-                </li>-->
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
                         <i class="fa fa-fw fa-sign-out"></i>Logout</a>
