--- a/templates/list_users.html
+++ b/templates/list_users.html
@@ -2,6 +2,48 @@
 {% block title %} List Users {% endblock %}
 {% block content %}
 
+    {% if user_list %}
+		<br> <br>
+
+		<table id="dataTable" class="table table-bordered dataTable" role="grid" aria-describedby="dataTable_info" style="width:100%" cellspacing="0">
+			<thead>
+			<tr role="row">
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="ID: activate to sort column ascending">ID</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Username: activate to sort column ascending">Username</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Name: activate to sort column ascending">Name</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Surname: activate to sort column ascending">Surname</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Email: activate to sort column ascending">Email</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="FacultyID: activate to sort column ascending">FacultyID</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="ProfileLink: activate to sort column ascending">Profile Link of the User</th>
+			</tr>
+			</thead>
+
+
+			<tbody>
+			{% for user in user_list %}
+				<tr role="row">
+					<td>{{ user[0] }}</td>
+					<td>{{ user[1] }}</td>
+					<td>{{ user[2] }}</td>
+					<td>{{ user[3] }}</td>
+                    <td>{{ user[4] }}</td>
+					<td>{{ user[5] }}</td>
+                    <td>
+                        <a href="{{ url_for('site.SelectedProfilePage', username=user[1]) }}">
+                            <button type="submit"  class="btn btn-info btn-md" data-toggle="modal" data-target="#profileOfOwnerAd">Profile</button>
+                        </a>
+                    </td>
+				</tr>
+			{% endfor %}
+			</tbody>
+
+
+		</table>
+
+
+	{% else %}
+		<p> There is not any registered user! </p>
+	{% endif %}
 
 
 {%endblock %}
