--- a/templates/search_user.html
+++ b/templates/search_user.html
@@ -12,7 +12,7 @@
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Name: activate to sort column ascending">Name</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Surname: activate to sort column ascending">Surname</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Email: activate to sort column ascending">Email</th>
-                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Email: activate to sort column ascending">Profile Link of the User</th>
+                <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="ProfileLink: activate to sort column ascending">Profile Link of the User</th>
 			</tr>
 			</thead>
 
