--- a/templates/game_friends.html
+++ b/templates/game_friends.html
@@ -76,6 +76,7 @@
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 100.333px;" aria-label="Player Number: activate to sort column ascending">Player Number</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Person Who Posted: activate to sort column ascending">Person Who Posted</th>
 				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Full Profile: activate to sort column ascending">Full Profile of Poster</th>
+				<th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" style="width: 145.333px;" aria-label="Edit-Update: activate to sort column ascending">Edit-Update</th>
 			</tr>
 			</thead>
 
@@ -92,6 +93,11 @@
 					<td>
 						<a href="{{ url_for('site.SelectedProfilePage', username=item[11]) }}">
                             <button type="button" class="btn btn-info btn-md">Go to Profile</button>
+                        </a>
+					</td>
+					<td>
+						<a href="{{ url_for('site.SelectedGameAnnounce', announceId=item[12]) }}">
+                            <button type="button" class="btn btn-info btn-md">Go to Announce</button>
                         </a>
 					</td>
 				</tr>
